F6-resume-02-2016/scss/_styles.scss
body {
	max-width: 100vw;
}

// Font-sizes from 10 through 30 
@for $i from 10 through 30{
   .fsz#{$i} { font-size: rem-calc($i); }
}

// Margins
@for $j from 0 through 30{
   .m#{$j} { margin: rem-calc($j); }.mtb#{$j} { margin-top: rem-calc($j); margin-bottom: rem-calc($j); }.mlr#{$j} { margin-left: rem-calc($j); margin-right: rem-calc($j); }.mt#{$j} { margin-top: rem-calc($j); }.mb#{$j} { margin-bottom: rem-calc($j); }.ml#{$j} { margin-left: rem-calc($j); }.mr#{$j} { margin-right: rem-calc($j); }
}

// Paddings
@for $k from 0 through 30{
   .p#{$k} { padding: rem-calc($k); }.ptb#{$k} { padding-top: rem-calc($k); padding-bottom: rem-calc($k); }.plr#{$k} { padding-left: rem-calc($k); padding-right: rem-calc($k); }.pt#{$k} { padding-top: rem-calc($k); }.pb#{$k} { padding-bottom: rem-calc($k); }.pl#{$k} { padding-left: rem-calc($k); }.pr#{$k} { padding-right: rem-calc($k); }
}

::-moz-selection { 
	background-color: #BEF6A8; 
}

::selection {
	background-color: #BEF6A8;
}

.strong{
	font-weight: 700;
}

.defs-only {
  position: absolute;
  height: 0; width: 0;
  overflow: none;
  left: -100%;
}
/* ... */

